Fixed timeline overflow

--- a/public/modules/calendar-timeline/timelineStyles.less
+++ b/public/modules/calendar-timeline/timelineStyles.less
@@ -30,7 +30,6 @@
   width: 100%;
   height: @pluginHeight;
   padding: 0;
-  overflow-x: hidden;
 
   //make everything non selectable
   -webkit-touch-callout: none;
